GET version of /play, still need to do the POST

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,12 +7,17 @@
     #header
       #logo
         Minebound
-      #nav
+      %ul#nav
         - if logged_in?
-          %a{:href => "/account"} Account
-          %a{:href => "/logout"} Logout
+          %li
+            %a{:href => "/play"} Got a token?
+          %li
+            %a{:href => "/account"} Account
+          %li
+            %a{:href => "/logout"} Logout
         - else
-          %a{:href => "/login"} Login
+          %li 
+            %a{:href => "/login"} Login
 
     #content
       =yield
