fleshed out model, wrote the first 75% of /pass

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,7 +6,7 @@
   %body
     #header
       #logo
-        Minebound
+        %a{:href => "/"} Minebound
       %ul#nav
         - if logged_in?
           %li
