style for flash div

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -20,4 +20,11 @@
             %a{:href => "/login"} Login
 
     #content
+      - if flash[:error]
+        #flash.error
+          = flash[:error]
+      - elsif flash[:notice]
+        #flash.notice
+          = flash[:notice]
+
       =yield
