--- a/views/style.sass
+++ b/views/style.sass
@@ -39,4 +39,10 @@ body
   position: absolute
 
   div
-    padding-bottom: 20px
+    margin-bottom: 20px
+
+#flash.error
+  background-color: #f99
+
+#flash.notice
+  background-color: #ff9
