inching closer to an alpha. ssh to ec2, other crap

--- a/views/died_email.erb
+++ b/views/died_email.erb
@@ -1,5 +1,5 @@
 Oh no D:
-Looks like you died in Minebound.
+Looks like you died in Lonecraft.
 
 Unfortunately, your time in this world has come to an end. You can play again after the world resets... if you can get a token.
 
@@ -7,11 +7,11 @@ From here, though, you still have more to do! Please do the following as soon as
 
 1) Send a game token to someone else. You can get more information about that here:
 
-  http://minebound.url/pass
+http://<%= ENV['SITE_DOMAIN'] =%>/pass
 
 2) Write about your experience in this round here:
 
-  http://minebound.url/write
+http://<%= ENV['SITE_DOMAIN'] =%>/write
 
 Thanks for playing!
 
