--- a/views/index.haml
+++ b/views/index.haml
@@ -1,1 +1,1 @@
-#blurb Minebound (is that what it's called?) is a thing that I'm working on.
+#blurb Lonecraft is an opportunity to play single-player Minecraft like you've never seen it before. Discover signs of previous life or build a legacy for those to come after you, pass the chance to play on to the next person in any way you choose, then read and write about it here on the site. It's the most fun you've had playing with yourself since... wow, nevermind.
