--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,7 +2,7 @@
   %head
     %title
       = "Lonecraft"
-    %link{:rel => "stylesheet", :href => "/minebound.css", :type => "text/css", :media => "all"}
+    %link{:rel => "stylesheet", :href => "/lonecraft.css", :type => "text/css", :media => "all"}
   %body
     #header
       #logo
