--- a/views/token_email.erb
+++ b/views/token_email.erb
@@ -6,7 +6,7 @@ Someone sent you a Lonecraft token. Here it is:
 
 If you're ready to play right now, you can cash it in directly from this page:
 
-http://<%= ENV['site_domain'] %>/play/<%= @token %>
+http://<%= ENV['SITE_DOMAIN'] %>/play/<%= @token %>
 
 You'll need to log in or create an account if you haven't already.
 
