new path for journaling

--- a/views/died_email.erb
+++ b/views/died_email.erb
@@ -11,7 +11,7 @@ http://<%= ENV['SITE_DOMAIN'] %>/pass
 
 2) Write about your experience in this round here:
 
-http://<%= ENV['SITE_DOMAIN'] %>/write
+http://<%= ENV['SITE_DOMAIN'] %>/relate
 
 Thanks for playing!
 
