improve site navigation
-add a link to /signup when logged out
-redirect to /account when you hit /signup while logged in

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -17,6 +17,8 @@
             %a{:href => "/logout"} Logout
         - else
           %li#first 
+            %a{:href => "/signup"} Signup
+          %li
             %a{:href => "/login"} Login
 
     #content
