rough prototype for /consider pages

--- a/views/relate_all.haml
+++ b/views/relate_all.haml
@@ -1,4 +1,4 @@
-#cya
+#rounds
   - for round in @rounds
-    %a{:href => "/relate/#{round.id}"}
+    %a{:href => "/relate/#{round.id}"}#round
       Round finished on #{round.finished}
