--- a/views/consider_all.haml
+++ b/views/consider_all.haml
@@ -1,5 +1,5 @@
 #games
   - for game in @games
     %h2#game
-      %a
+      %a{:href => "/relate/#{game.id}"}
         Game ##{game.id}, #{game.first_round.started} - #{game.finished?? game.last_round.finished : "Ongoing"}
