I don't know how HAML works

--- a/views/relate_all.haml
+++ b/views/relate_all.haml
@@ -1,4 +1,4 @@
 #rounds
   - for round in @rounds
-    %a{:href => "/relate/#{round.id}"}#round
+    %a{:href => "/relate/#{round.id}", :class => "round"}
       Round finished on #{round.finished}
